# code-editor-rust

./: Cargo.toml  README.md  install.sh
resources/: AppIcon.icns  Info.plist  code-editor-launcher  create_icon.sh
src/: app.rs  file_tree.rs  git.rs  gui.rs  main.rs  search.rs  settings.rs  syntax.rs  terminal.rs
src/editor/: buffer.rs  cursor.rs  mod.rs
src/gui/: editor_view.rs  keys.rs  menubar.rs  mod.rs  overlays.rs  sidebar.rs
src/ui/: render.rs
