[package]
name = "code-editor-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.31"
egui_extras = "0.31"

# Text buffer
ropey = "1.6"

# Git
git2 = "0.19"

# Async
tokio = { version = "1", features = ["full"] }

# File system
walkdir = "2"
regex = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Terminal
portable-pty = "0.8"

# File dialogs
rfd = "0.15"

# Utils
dirs = "5"
unicode-width = "0.2"
arboard = "3"
open = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
